--- a/src/app/pages/alarm/alarm.component.scss
+++ b/src/app/pages/alarm/alarm.component.scss
@@ -31,6 +31,7 @@
 
 .send-btn {
   font-size: 1.4rem;
-  padding: 5px 25px;
-  margin: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-top: 20px;
 }
